--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Starter kit for JS based application",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon src/server/index.js"
   },
   "author": "Prasad Honrao",
   "license": "MIT",
@@ -22,8 +23,10 @@
     "chalk": "4.1.0",
     "cheerio": "1.0.0-rc.5",
     "compression": "1.7.4",
+    "concurrently": "^8.2.0",
     "cross-env": "7.0.3",
     "css-loader": "5.1.0",
+    "dotenv": "^16.3.1",
     "eslint": "7.21.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-watch": "7.0.0",
@@ -36,6 +39,7 @@
     "localtunnel": "2.0.1",
     "mini-css-extract-plugin": "^1.3.9",
     "mocha": "8.3.0",
+    "nodemon": "^3.0.1",
     "npm-run-all": "4.1.5",
     "numeral": "2.0.6",
     "open": "7.4.2",
