--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon src/server/index.js"
+    "client": "nodemon src/client/js/index.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "preserver": "node src/server/welcome.js",
+    "server": "node src/server/index.js",
+    "share": "lt --port 9999"
   },
   "author": "Prasad Honrao",
   "license": "MIT",
@@ -40,12 +44,12 @@
     "mini-css-extract-plugin": "^1.3.9",
     "mocha": "8.3.0",
     "nodemon": "^3.0.1",
-    "npm-run-all": "4.1.5",
     "numeral": "2.0.6",
     "open": "7.4.2",
     "rimraf": "3.0.2",
     "style-loader": "2.0.0",
     "surge": "0.21.7",
+    "url": "^0.11.1",
     "webpack": "5.24.2",
     "webpack-dev-middleware": "4.1.0"
   }
